--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,23 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "tiderjian/think-core": ">=11.27",
+        "php": ">=8.0",
+        "tiderjian/think-core": ">=12.14.0",
         "zircote/swagger-php": "^3.0"
     },
     "autoload": {
         "psr-4": {
-            "QscmfApi\\": "src/"
+            "QscmfApiCommon\\": "src/Common/",
+            "QscmfApi\\": "src/Api/",
+            "QscmfCrossApi\\": "src/CrossApi/"
         }
     },
     "extra": {
         "qscmf": {
             "providers": [
-                "QscmfApi\\QscmfApiProvider"
+                "QscmfApiCommon\\QscmfApiCommonProvider",
+                "QscmfApi\\QscmfApiProvider",
+                "QscmfCrossApi\\QscmfCrossApiProvider"
             ]
         }
     }
